// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonOutline Focus: renders outline when tabbing into focus, but not when clicking 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Red Hat Display','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.875rem;
  height: 36px;
  padding-left: 24px;
  padding-right: 24px;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  color: #6C43E0;
}

.c1 .c2 {
  height: 18px;
  width: 18px;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #F3F2FF;
  color: #6C43E0;
}

.c1:active,
.c1.active {
  background: #E8E5FF;
  border-color: #9785F2;
  color: #6C43E0;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #FFFFFF;
  border-color: #C1C6CC;
  color: #6C43E0;
}

<button
  class="c0 c1"
>
  focus
</button>
`;

exports[`ButtonOutline Focus: renders outline when tabbing into focus, but not when clicking 2`] = `
<button
  class="ButtonBase__ButtonOuter-sc-1bpio6j-0 gwmLhC ButtonBase-sc-1bpio6j-1 ButtonOutline-ncggc7-0 fXWsVt"
>
  focus
</button>
`;

exports[`ButtonOutline has the correct style 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Red Hat Display','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.875rem;
  height: 36px;
  padding-left: 24px;
  padding-right: 24px;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  color: #6C43E0;
}

.c1 .c2 {
  height: 18px;
  width: 18px;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #F3F2FF;
  color: #6C43E0;
}

.c1:active,
.c1.active {
  background: #E8E5FF;
  border-color: #9785F2;
  color: #6C43E0;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #FFFFFF;
  border-color: #C1C6CC;
  color: #6C43E0;
}

<button
  class="c0 c1"
>
  Outline
</button>
`;

exports[`ButtonOutline is rendered  1`] = `ShallowWrapper {}`;
